fix: verification input align

--- a/src/modules/auth/ui/Results/ConfirmEmail/ConfirmEmail.module.css
+++ b/src/modules/auth/ui/Results/ConfirmEmail/ConfirmEmail.module.css
@@ -43,3 +43,8 @@
 .filled {
     color: #000;
 }
+.varificationContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
